Add Mockito and Byte Buddy dependencies; Enhance Price class with constructors; create ProductControllerTest and added test cases for create a new  product and get product by id;